--- a/grid/calculator.html
+++ b/grid/calculator.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Masai Calculator</title>
+    <link rel="stylesheet" href="calculator.css">
 </head>
+
 <body>
-    <div calss="claculator">
-        <div class="empty"></div>
+
+<h1 class="title">Masai Calculator</h1>
+
+<div class="calc-box">
+
+    <div class="calculator">
+
+        <div class="display"></div>
+
         <div class="no">1</div>
         <div class="no">2</div>
         <div class="no">3</div>
         <div class="operator">+</div>
+
         <div class="no">4</div>
         <div class="no">5</div>
         <div class="no">6</div>
         <div class="operator">-</div>
+
         <div class="no">7</div>
         <div class="no">8</div>
         <div class="no">9</div>
-        <div class="operator">*</div>
-        <div class="Clear">C</div>
+        <div class="operator">x</div>
+
+        <div class="clear">C</div>
         <div class="no">0</div>
         <div class="operator">=</div>
         <div class="operator">/</div>
+
     </div>
+
+</div>
+
 </body>
 </html>
